--- a/package.json
+++ b/package.json
@@ -10,13 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.43",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/database": "^21.14.0",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
+    "axios": "^1.8.4",
+    "expo": "^52.0.44",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
