--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/database": "^21.14.0",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
-    "expo": "^52.0.44",
-    "expo-status-bar": "~2.0.1",
+    "cloudinary-react-native": "^1.0.1",
+    "expo": "^53.0.0",
+    "expo-camera": "~16.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-media-library": "~17.1.6",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.1",
     "jwt-decode": "^4.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
