--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/database": "^21.14.0",
     "@react-native-picker/picker": "2.11.0",
@@ -22,20 +23,24 @@
     "expo": "^53.0.0",
     "expo-camera": "~16.1.6",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-media-library": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.1",
     "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-paper": "^5.14.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "socket.io-client": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
